<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <LinearLayout 
        
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         android:background="@drawable/rounded_corner"
         android:orientation="vertical"
         android:padding="6dp" >
    <LinearLayout 
        
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         android:padding="6dp" >
            
              <TextView
           android:id="@+id/txt_date"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_gravity="left"
           android:layout_marginLeft="6dp"
           android:background="@drawable/rounded_corner"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textColor="#010101"
           android:padding="4dp"
           android:hint="@string/hint_curr_date"
            />

              <ImageButton
                  android:id="@+id/btn_date"
                  android:layout_width="wrap_content"
                  android:layout_height="32dip"
                  android:src="@drawable/calendar_icon"
                  android:layout_marginRight="6dp" />
              
           </LinearLayout>

    <LinearLayout 
        
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="7dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/rounded_corner"
         android:orientation="horizontal"
         android:padding="6dp" >
    
    <Spinner
        android:id="@+id/spin_tags"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/rounded_corner" />

    <Button
        android:id="@+id/btn_add_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Tag" />
    
    </LinearLayout>
    <EditText
        android:id="@+id/et_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="2"
        android:background="@drawable/rounded_corner"
        android:hint="@string/hint_comments" />

    <EditText
            android:id="@+id/rs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="8dp"
            android:ems="12"
            android:inputType="numberDecimal"
            android:hint="@string/hint_rs" 
            android:textColor="#010101"
            android:background="@drawable/rounded_corner"
            
            android:cursorVisible="true"
            android:singleLine="true" />
    
    <Spinner
        android:id="@+id/spin_rs_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner" />
            
    <EditText
        android:id="@+id/et_bal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="bal"
        android:background="@drawable/rounded_corner"
        android:editable="false" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add" />

    </LinearLayout>
           
     
</LinearLayout>
