<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AddExpense"
    android:orientation="vertical">

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha= "0.8"
        android:fitsSystemWindows="true" >
     
   <RelativeLayout
       android:id="@+id/fullscreen_content_controls"
       android:layout_width="fill_parent"
       android:layout_height="45dp"
       android:layout_gravity="top"
       android:orientation="horizontal"
       android:background="@color/black_overlay"
       tools:ignore="UselessParent"
       android:padding="5dp"
        >

       <TextView
           android:id="@+id/btn_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:text="Cancel"
           android:textSize="28sp"
           android:textColor="#FFFFFF"
           android:paddingLeft="25dp"
           android:paddingRight="25dp"
           
           />

       <TextView
           android:id="@+id/btn_save"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:text="Save"
           android:textSize="28sp"
           android:textColor="#FFFFFF"
           android:paddingLeft="25dp"
           android:paddingRight="25dp"
           />

       
   </RelativeLayout>
 </FrameLayout>

    
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:gravity="center"
         android:orientation="vertical"
          
        >
        
        <LinearLayout
            android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:layout_gravity="center"
         	android:gravity="center"
         	android:orientation="horizontal"
            >
            
            <TextSwitcher
                android:id="@+id/txtSw_inOut"
                android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:padding="20dp"
         	    >
         	</TextSwitcher>    
            <TextView
                android:id="@+id/txt_rupees"
                android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:textSize="36sp"
         		android:layout_marginLeft="10dp" 
                /> 
            <TextView
                android:id="@+id/tv_CurrencySymbol"
                android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:textSize="32sp"
         		android:layout_marginLeft="10dp" 
                /> 
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:orientation="vertical"
         	>
            <TextView 
                android:id="@+id/tv_selectCategory"
                android:layout_width="match_parent"
         		android:layout_height="wrap_content"
         		android:text="Select Category"
         		android:textSize="30sp"
         		android:paddingTop="10dp"
         		android:paddingBottom="5dp"
         		/>
            <View
        		android:layout_width="match_parent"
        		android:layout_height="1dp"
        		android:background="#444444" />
        
        <LinearLayout
            android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:orientation="horizontal"
         	android:layout_marginTop="5dp"
            >
            <View
        		android:id="@+id/view_categoryColor"
       			android:layout_width="60dp"
        		android:layout_height="40dp"
        		android:background="#555555" />
    
    	<TextView
        	android:id="@+id/tv_categoryName"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:layout_marginTop="3dp"
        	android:layout_marginLeft="10dp"
        	android:lines="1"
        	android:text="@string/hint_category_Name"
        	android:textSize="26sp" 
        	android:gravity="center_vertical">
    		</TextView>
    		
        </LinearLayout>
        
            
        </LinearLayout>
        
        <LinearLayout 
        
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:layout_gravity="center_horizontal"
         
         android:orientation="horizontal"
         android:padding="6dp" >
            <!-- android:background="@drawable/rounded_corner" -->
              <TextView
           android:id="@+id/txt_date"
           android:layout_width="0dip"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_gravity="left"
           android:layout_marginLeft="6dp"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textColor="#010101"
           android:padding="4dp"
           android:hint="@string/hint_curr_date"
           android:textSize="24sp" />
           <!-- android:background="@drawable/rounded_corner" -->
           

              <ImageButton
                  android:id="@+id/btn_date"
                  android:layout_width="wrap_content"
                  android:layout_height="32dip"
                  android:src="@drawable/calendar_icon"
                  android:layout_marginRight="6dp" />
              
           </LinearLayout>

           <LinearLayout 
        
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
         android:padding="6dp" >
            <!-- android:background="@drawable/rounded_corner" -->
              <EditText
           android:id="@+id/edtxt_comment"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="left"
           android:layout_marginLeft="6dp"
           android:textColor="#010101"
           android:padding="4dp"
           android:hint="@string/hint_comments"
           android:textSize="24sp" />
           <!-- android:background="@drawable/rounded_corner" -->
           
           </LinearLayout>
           
    </LinearLayout>     
    
</ScrollView>
</LinearLayout>